Ενημέρωση αρχείων και διορθώσεις σφαλμάτων