@@ -40,19 +40,13 @@
                 </configuration>
             </plugin>
 
-            <!-- Maven Exec Plugin -->
+            <!-- JavaFX Maven Plugin -->
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.5</version>
                 <configuration>
                     <mainClass>com.dmstplus.App</mainClass>
-                    <arguments>
-                        <argument>--module-path</argument>
-                        <argument>C:\Users\dim\JAVA\JavaFX\openjfx-23.0.1_windows-x64_bin-sdk (1)\javafx-sdk-23.0.1\lib</argument>
-                        <argument>--add-modules</argument>
-                        <argument>javafx.controls,javafx.fxml</argument>
-                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
